--- a/StorageBufferTest/StorageBufferTest.csproj
+++ b/StorageBufferTest/StorageBufferTest.csproj
@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="FindItems.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RegisterUsedMaterial.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
