--- a/StorageBufferTest/StorageBufferTest.csproj
+++ b/StorageBufferTest/StorageBufferTest.csproj
@@ -49,10 +49,10 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FindItems.cs" />
+    <Compile Include="FindItemsTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegisterUsedMaterial.cs" />
-    <Compile Include="ChangeStatus.cs" />
+    <Compile Include="RegisterUsedMaterialTest.cs" />
+    <Compile Include="ChangeStatusTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
