--- a/StorageBuffer/StorageBuffer.csproj
+++ b/StorageBuffer/StorageBuffer.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Application\OrderRepo.cs" />
     <Compile Include="Domain\Customer.cs" />
     <Compile Include="Domain\IItem.cs" />
+    <Compile Include="Domain\Invoice.cs" />
     <Compile Include="Domain\Material.cs" />
     <Compile Include="Domain\Order.cs" />
     <Compile Include="Domain\Orderline.cs" />
