--- a/StorageBuffer/StorageBuffer.csproj
+++ b/StorageBuffer/StorageBuffer.csproj
@@ -78,11 +78,18 @@
     <Compile Include="Domain\Material.cs" />
     <Compile Include="Domain\Order.cs" />
     <Compile Include="Domain\Orderline.cs" />
+    <Compile Include="MaterialChooseWindow.xaml.cs">
+      <DependentUpon>MaterialChooseWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Model\scSingleton.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="MaterialChooseWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="OrderWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
