--- a/StorageBuffer/StorageBuffer.csproj
+++ b/StorageBuffer/StorageBuffer.csproj
@@ -87,6 +87,9 @@
     <Compile Include="Domain\Material.cs" />
     <Compile Include="Domain\Order.cs" />
     <Compile Include="Domain\Orderline.cs" />
+    <Compile Include="CustomerChooseWindow.xaml.cs">
+      <DependentUpon>CustomerChooseWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MaterialChooseWindow.xaml.cs">
       <DependentUpon>MaterialChooseWindow.xaml</DependentUpon>
     </Compile>
@@ -95,6 +98,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="CustomerChooseWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="MaterialChooseWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
