--- a/StorageBufferTest/StorageBufferTest.csproj
+++ b/StorageBufferTest/StorageBufferTest.csproj
@@ -55,6 +55,7 @@
     <Compile Include="ChangeStatusTest.cs" />
     <Compile Include="CreateOrderTest.cs" />
     <Compile Include="CreateCustomerTest.cs" />
+    <Compile Include="CreateMaterial.cs" />
     <Compile Include="UpdateOrderTest.cs" />
   </ItemGroup>
   <ItemGroup>
