--- a/StorageBufferTest/StorageBufferTest.csproj
+++ b/StorageBufferTest/StorageBufferTest.csproj
@@ -56,7 +56,7 @@
     <Compile Include="CreateOrderTest.cs" />
     <Compile Include="CreateCustomerTest.cs" />
     <Compile Include="CreateMaterial.cs" />
-    <Compile Include="UpdateCustomer.cs" />
+    <Compile Include="UpdateCustomerTest.cs" />
     <Compile Include="UpdateMaterialTest.cs" />
     <Compile Include="UpdateOrderTest.cs" />
   </ItemGroup>
