RemoveMaterial Unit Test and Refactoring

--- a/StorageBufferTest/StorageBufferTest.csproj
+++ b/StorageBufferTest/StorageBufferTest.csproj
@@ -57,6 +57,7 @@
     <Compile Include="CreateCustomerTest.cs" />
     <Compile Include="CreateMaterial.cs" />
     <Compile Include="RemoveCustomerTest.cs" />
+    <Compile Include="RemoveMaterialTest.cs" />
     <Compile Include="UpdateCustomerTest.cs" />
     <Compile Include="UpdateMaterialTest.cs" />
     <Compile Include="UpdateOrderTest.cs" />
